service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: pacman
  name: pacman-service
  namespace: pacman-argo
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: pacman
status:
  loadBalancer: {}
