ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pacman-ingress
  namespace: pacman
spec:
  rules:
  - host: pacman.local
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: pacman-service
            port:
              number: 80
